--- a/src/app/quotes-m/quotes.component.html
+++ b/src/app/quotes-m/quotes.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="text-center">Top Inspirational quotes</h1>
+    <h1 class="text-center">Inspirational Quotes</h1>
     <div class="row">
       <div class="col-sm-12">
         <div class="card">
